@@ -6,6 +6,7 @@
 \concept{modelMatrix}
 \concept{mouseMode}
 \concept{projMatrix}
+\concept{scale}
 \concept{userMatrix}
 \concept{viewport}
 \concept{zoom}
@@ -103,6 +104,8 @@ open3d(\dots, params=get("r3dDefaults", envir=.GlobalEnv))
     }
     \item{\code{projMatrix}}{\emph{\bold{R.O.}}; a 4 by 4 matrix describing the current
       projection of the scene.}
+    \item{\code{scale}}{real.  A vector of 3 values indicating the amount by which to
+      rescale each axis before display.  Set by \code{\link{aspect3d}}.}
     \item{\code{skipRedraw}}{whether to update the display.  Set to \code{FALSE} to suspend
       updating while making multiple changes to the scene.  See \code{demo(hist3d)} for an example.}
     \item{\code{userMatrix}}{a 4 by 4 matrix describing user actions to
