@@ -7,13 +7,15 @@
 }
 \usage{
 view3d( theta = 0, phi = 15, ...)
-rgl.viewpoint( theta = 0, phi = 15, fov = 60, zoom = 1, interactive = TRUE, userMatrix )
+rgl.viewpoint( theta = 0, phi = 15, fov = 60, zoom = 1, scale = par3d("scale"), 
+               interactive = TRUE, userMatrix )
 }
 \arguments{
   \item{theta,phi}{polar coordinates}
   \item{...}{additional parameters to pass to \code{rgl.viewpoint}}
   \item{fov}{field-of-view angle}
   \item{zoom}{zoom factor}
+  \item{scale}{real length 3 vector specifying the rescaling to apply to each axis}
   \item{interactive}{logical, specifying if interactive navigation is allowed}
   \item{userMatrix}{4x4 matrix specifying user point of view}
 }
