@@ -8,12 +8,16 @@
 //   Viewpoint
 //
 
-Viewpoint::Viewpoint(PolarCoord in_position, float in_fov, float in_zoom, bool in_interactive) :
+Viewpoint::Viewpoint(PolarCoord in_position, float in_fov, float in_zoom, Vec3 in_scale, bool in_interactive) :
     SceneNode(VIEWPOINT),
     fov(in_fov),
     zoom(in_zoom),
     interactive(in_interactive)
 {
+    scale[0] = in_scale.x;
+    scale[1] = in_scale.y;
+    scale[2] = in_scale.z;
+     
     setPosition(in_position);
     clearMouseMatrix();
 }
@@ -24,7 +28,7 @@ PolarCoord& Viewpoint::getPosition()
   return position;
 }
 
-Viewpoint::Viewpoint(double* in_userMatrix, float in_fov, float in_zoom, bool in_interactive) :
+Viewpoint::Viewpoint(double* in_userMatrix, float in_fov, float in_zoom, Vec3 in_scale, bool in_interactive) :
     SceneNode(VIEWPOINT),
     position( PolarCoord(0.0f, 0.0f) ),
     fov(in_fov),
@@ -34,6 +38,10 @@ Viewpoint::Viewpoint(double* in_userMatrix, float in_fov, float in_zoom, bool in
     for (int i=0; i<16; i++) {
 	userMatrix[i] = in_userMatrix[i];
     }
+    scale[0] = in_scale.x;
+    scale[1] = in_scale.y;
+    scale[2] = in_scale.z;
+    
     clearMouseMatrix();
 }
 
@@ -116,7 +124,7 @@ void Viewpoint::setupTransformation(RenderContext* rctx, const Sphere& viewSpher
   glTranslatef( 0.0f, 0.0f, -frustum.distance );
 
   setupOrientation(rctx);
-
+  glScaled(scale[0], scale[1], scale[2]);
   glTranslatef( -viewSphere.center.x, -viewSphere.center.y, -viewSphere.center.z );
 }
 
@@ -136,7 +144,7 @@ void Viewpoint::updateMouseMatrix(Vec3 dragStart, Vec3 dragCurrent)
 
 void Viewpoint::updateMouseMatrix(PolarCoord newpos)
 {
-	Matrix4x4 M,N;
+    Matrix4x4 M,N;
     M.setRotate(0, newpos.phi);
     N.setRotate(1, -newpos.theta);
     M = M * N;
@@ -175,6 +183,20 @@ void Viewpoint::setUserMatrix(double* src)
 {
 	for(int i=0; i<16;i++)
 		userMatrix[i] = src[i];
+}
+
+void Viewpoint::getScale(double* dest)
+{
+    dest[0] = scale[0];
+    dest[1] = scale[1];
+    dest[2] = scale[2];
+}
+
+void Viewpoint::setScale(double* src)
+{
+    scale[0] = src[0];
+    scale[1] = src[1];
+    scale[2] = src[2];
 }
 
 Vertex Viewpoint::getCOP(const Sphere& viewSphere) const
